--- a/package.json
+++ b/package.json
@@ -8,15 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "concurrently": "^6.4.0",
-    "dotenv": "^16.0.3",
-    "express.js": "^1.0.0",
-    "firebase": "^9.22.0",
-    "nodemon": "^2.0.15"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.4"
-  }
+  "license": "ISC"
 }
