--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.11.0",
-    "eslint": "^8.40.0",
-    "mongoose": "^7.1.1"
+    "eslint": "^8.40.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
