--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "discord.js": "^14.11.0",
     "eslint": "^8.40.0",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.0"
+    "mongoose": "^7.2.0",
+    "pretty-ms": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
