--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.11.0",
+    "djs-commander": "^0.0.47",
     "eslint": "^8.40.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
