--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^14.11.0",
     "djs-commander": "^0.0.47",
+    "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
