--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "canvacord": "^5.4.9",
     "discord.js": "^14.11.0",
+    "djs-commander": "^0.0.48",
     "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
     "mongodb": "^5.5.0",
